objects/LLC_BI__Loan__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Booked_Date__c</fullName>
        <description>This field is automatically populated. This field is a calculated date that represents when the Loan is considered &apos;Booked&apos; as defined by the Product State Configuration. This date should not be edited.</description>
        <inlineHelpText>Booked Date is a calculated date that represents when the Loan is considered &apos;Booked&apos; as defined by the Product State Configuration.  This date should not be edited.</inlineHelpText>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Borrower_City__c</fullName>
        <description>This field is optional. It is manually set. This field is used to specify the city in the address of the loan&apos;s primary borrower.</description>
        <label>Borrower City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Borrower_GL_Balance__c</fullName>
        <description>This field is optional. It is manually set. This currency field is used to specify the current borrower balance as shown on the institution&apos;s General Ledger. This field is used for reporting purposes only.</description>
        <inlineHelpText>Borrower&apos;s General Ledger Balance. Typically equals Principal Balance of the Loan. Exceptions are non-accrual, and charge-offs.</inlineHelpText>
        <label>Borrower GL Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Borrower_State__c</fullName>
        <description>This field is optional. It is manually set. This field is used to specify the state in the address of the loan&apos;s primary borrower.</description>
        <label>Borrower State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It is manually set. This field is lookup to the branch object, and is used to specify the branch of the financial institution where the loan is held.</description>
        <label>Branch</label>
        <referenceTo>LLC_BI__Branch__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Broker_Fee__c</fullName>
        <description>This field is optional. It is manually set. This field holds the referral fee if the Loan was referred through a referral source, broker, or other intermediary.</description>
        <label>Referral Fee</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It is automatically set when a budget is selected for the loan. It is used for Construction Loan Administration loans.</description>
        <label>Budget</label>
        <referenceTo>LLC_BI__Budget__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Action_Taken__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates the action taken on the loan.</description>
        <inlineHelpText>CRA Action Taken for Loan</inlineHelpText>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Loan Originated</fullName>
                </value>
                <value>
                    <fullName>2 - Loan Purchased By Your Institution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Affiliate__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates if the action was taken at the institution or an affiliate.</description>
        <inlineHelpText>CRA Affiliate</inlineHelpText>
        <label>Affiliate Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Action taken at this institution</fullName>
                </value>
                <value>
                    <fullName>2 - Action taken at an affiliate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Amount__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates the loan amount reported in thousands, rounded to the nearest thousand ($500 or higher should be rounded up to the next thousand).</description>
        <inlineHelpText>Report the amount in thousands, rounded to the nearest thousand ($500 should be rounded up to the next thousand).</inlineHelpText>
        <label>Loan Amount (amount in thousands)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Census_Tract_Text__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates the census tract number of the property, as defined by the U.S. Census Bureau.</description>
        <inlineHelpText>Census tract</inlineHelpText>
        <label>Census Tract (####.## format)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Community_Development_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be manually selected. When enabled, it indicates that this loan falls under a category that makes it CRA Community Development Reportable. When disabled, the loan does not fall under the CRA Community Development Reportable. By default, the field is disabled.</description>
        <inlineHelpText>CRA Community Development Reportable</inlineHelpText>
        <label>Community Development Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Consortium_Third_Party_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be manually selected. When enabled, it indicates that this loan falls under a category that makes it CRA Consortium/Third Party Reportable. When disabled, the loan does not fall under the CRA Consortium/Third Party Reportable. By default, the field is disabled.</description>
        <inlineHelpText>CRA Consortium/Third Party Reportable</inlineHelpText>
        <label>Consortium/Third Party Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Date_Action_Taken__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates the date that the loan was originated or purchased.</description>
        <inlineHelpText>CRA Date Action Taken</inlineHelpText>
        <label>Date Action Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_FIPS_County_Code_Text__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates the property&apos;s three-digit Federal Information Processing Standards (FIPS) County Code.</description>
        <inlineHelpText>FIPS County Code</inlineHelpText>
        <label>Three Digit County Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_FIPS_County_Code__c</fullName>
        <description>--DEPRECATED-- FIPS County Code</description>
        <inlineHelpText>FIPS County Code</inlineHelpText>
        <label>-D Three Digit County Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_FIPS_State_Code_Text__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates the property&apos;s five-digit Federal Information Processing Standards (FIPS) County Code.</description>
        <inlineHelpText>FIPS State Code</inlineHelpText>
        <label>Two Digit State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_FIPS_State_Code__c</fullName>
        <description>--DEPRECATED-- FIPS State Code</description>
        <inlineHelpText>FIPS State Code</inlineHelpText>
        <label>-D Two Digit State Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Loan_ID__c</fullName>
        <description>This field is optional. It is manually populated. This field is the unique system-generated Loan Identification Number.</description>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>CRA Loan ID</inlineHelpText>
        <label>Loan Identification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_MSA_MD_Number_Text__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates the five-digit metropolitan statistical area (MSA) number or, if available, the five-digit metropolitan division (MD) number.</description>
        <inlineHelpText>MSA/MD Number</inlineHelpText>
        <label>Five Digit MSA/MD Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_MSA_MD_Number__c</fullName>
        <description>--DEPRECATED-- MSA/MD Number</description>
        <inlineHelpText>MSA/MD Number</inlineHelpText>
        <label>-D Five Digit MSA/MD Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be manually selected. When enabled, it indicates that this the loan falls under a category that makes it CRA reportable. When disabled, the loan is not CRA reportable. By default, this field is disabled.</description>
        <inlineHelpText>CRA Reportable</inlineHelpText>
        <label>CRA Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Revenue__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates the gross annual revenue of the business or farm to which the loan was made.</description>
        <inlineHelpText>CRA Revenue</inlineHelpText>
        <label>Revenue Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Less than or equal to $1 million</fullName>
                </value>
                <value>
                    <fullName>2 - Greater than $1 million</fullName>
                </value>
                <value>
                    <fullName>3 - Not Known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Type_Code__c</fullName>
        <description>This field is optional. It is manually populated. This picklist field indicates the type of loan (Small business, Small farm, Other Lines / Loans for Small Business Purposes, Other Miscellaneous Loan Data, Motor vehicle, Home equity, Credit card, Other - Secured, Other - Unsecured).</description>
        <label>Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small business</fullName>
                </value>
                <value>
                    <fullName>Small farm</fullName>
                </value>
                <value>
                    <fullName>Other secured lines of credit - small business</fullName>
                </value>
                <value>
                    <fullName>Home equity</fullName>
                </value>
                <value>
                    <fullName>Motor vehicle</fullName>
                </value>
                <value>
                    <fullName>Credit card</fullName>
                </value>
                <value>
                    <fullName>Other secured consumer loans</fullName>
                </value>
                <value>
                    <fullName>Other unsecured consumer loans</fullName>
                </value>
                <value>
                    <fullName>Other loan data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Calculated_Balloon_Amount__c</fullName>
        <description>This field is automatically populated via the payment structure. It stores the value of the balloon amount as calculated via a payment structure.</description>
        <inlineHelpText>Balloon amount calculated via a payment structure</inlineHelpText>
        <label>Calculated Balloon Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Call_Report_Code__c</fullName>
        <description>This field is automatically populated by imports as it comes from the General Ledger. It relates to how the loan portfolio is frequently reported to the board and regulators. This field is not displayed to the user.</description>
        <label>Call Report Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Census_Tract__c</fullName>
        <description>--DEPRECATED-- Census tract numbers as reported in the 2010 census. Used in HMDA reporting</description>
        <inlineHelpText>Census tract</inlineHelpText>
        <label>-D Census Tract (####.## format)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Class_Code__c</fullName>
        <description>This field is optional. If in use, it is automatically populated. This field is used to categorize loans by class. It is used for reporting purposes only.</description>
        <label>Class Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CloseDate__c</fullName>
        <description>This field is optional. This field is manually set. This date field is used to specify the date the financial institution expects the loan to close.</description>
        <label>Projected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Close_Date_Hard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually set. This field is a checkbox used to specify if the loan has a hard close date.</description>
        <label>Closing Date Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Close_Month__c</fullName>
        <description>This field is automatically populated. This formula field is used to specify the month in which the loan is projected to close (the month specified in Projected Closed Date).</description>
        <formula>DATE(VALUE(LEFT(TEXT(LLC_BI__CloseDate__c),4)), VALUE(MID(TEXT(LLC_BI__CloseDate__c),6,2)), 01)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Closed_Date__c</fullName>
        <description>This field is automatically populated. This field is a calculated date that represents when the loan is considered &apos;Closed&apos; as defined by the Product State Configuration. This date should not be edited.</description>
        <inlineHelpText>Closed Date is a calculated date that represents when the Loan is considered &apos;Closed&apos; as defined by the Product State Configuration. This date should not be edited.</inlineHelpText>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Complete__c</fullName>
        <description>This field is optional. It is manually populated. It is used for construction loans and specifies the completion % of the overall project.</description>
        <label>% Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Compliance_Officer__c</fullName>
        <description>If used, this field is typically automatically set by a workflow. This field specifies the user who is assigned as the compliance officer for this loan.</description>
        <label>Compliance Officer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Consortium_Third_Party_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be manually selected. When enabled, it indicates that this loan falls under a category that makes it Consortium/Third Party Reportable. When this field is disabled it means the loan does not fall under the Consortium/Third Party Reportable. By default, the field is disabled.</description>
        <inlineHelpText>Consortium/Third Party Reportable</inlineHelpText>
        <label>Consortium/Third Party Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Construction_CO_Date__c</fullName>
        <description>This field is optional. It is manually populated. It is used to identify the date a Certificate of Occupancy was issued for recently completed construction.</description>
        <label>Construction CO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Approval_Date__c</fullName>
        <description>This field is manually populated. It is not required. This field is a date field used to specify the date credit approved the loan.</description>
        <label>Credit Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically populated when a credit memo template is selected. This field is a lookup field that specifies the credit memo associated to the loan.</description>
        <label>Credit Memo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LLC_BI__Credit_Memo__c.LLC_BI__Is_Template__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Credit_Memo__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Gross_Lendable_Value_Collateral1__c</fullName>
        <description>This field is automatically populated via a roll-up. It stores the current gross lendable value of all collateral based on advance rate. This field is used with old collateral structure only, not Collateral Management.</description>
        <label>Current Gross Lendable Value</label>
        <summarizedField>LLC_BI__Loan_Collateral__c.LLC_BI__Gross_Lendable_Value__c</summarizedField>
        <summaryForeignKey>LLC_BI__Loan_Collateral__c.LLC_BI__Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Interest_Rate__c</fullName>
        <description>This field is optional. It is manually populated. This field is used to specify the current interest rate the loan is subject to.</description>
        <label>Current Interest Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_LTV_Collateral1__c</fullName>
        <description>This field is automatically populated via a formula. It stores the current LTV based on Collateral1 records.</description>
        <formula>(LLC_BI__Amount__c + LLC_BI__Total_Prior_Lien_Amount_Collateral1__c) / LLC_BI__Gross_Collateral1_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates LTV. Advance Rate is not considered in this calculation.</inlineHelpText>
        <label>Current LTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_LTV__c</fullName>
        <description>This field is automatically populated via a formula. It stores the current LTV of the loan based on its Collateral Mgmt records. If the Product Feature is NOT a Line of Credit, or if the Product Feature does not exist, this is the formula: (Principal Balance + Total Prior Lien Amount from all Collateral)/ Collateral Value from all Collateral. If the Product Feature is a Line of Credit, this is the formula: Original Loan Amount / (Collateral Value from all Collateral - Total Prior Lien Amount from all Collateral)</description>
        <formula>IF(LLC_BI__Total_Collateral_Value__c - LLC_BI__Total_Superior_Lien_Amount__c == 0, 0, IF( (LLC_BI__Product_Reference__r.LLC_BI__Product_Feature__c != null &amp;&amp; LLC_BI__Product_Reference__r.LLC_BI__Product_Feature__r.LLC_BI__Line_Of_Credit__c == true) || NOT(LLC_BI__Is_Booked__c) ,(LLC_BI__Amount__c + LLC_BI__Total_Superior_Lien_Amount__c) / LLC_BI__Total_Collateral_Value__c, (LLC_BI__Principal_Balance__c + LLC_BI__Total_Superior_Lien_Amount__c) / LLC_BI__Total_Collateral_Value__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Principal Balance or Loan Amount / (Collateral Value from all Collateral - Total Prior Lien Amount from all Collateral)</inlineHelpText>
        <label>Current LTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Total_Lendable_Value__c</fullName>
        <description>This field is automatically populated via a formula. It stores lendable value based on all Collateral Mgmt records.</description>
        <formula>LLC_BI__Loan_Collateral_Aggregate__r.LLC_BI__Current_Total_Lendable_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of all collateral lendable value</inlineHelpText>
        <label>Current Gross Lendable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Days_to_Close__c</fullName>
        <description>This field is automatically populated via a formula. It stores the number of days from the date the loan was created to the date the loan closed.</description>
        <formula>ROUND(LLC_BI__Closed_Date__c - DATEVALUE(CreatedDate),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For Booked transactions: How long did it take to close this loan?</inlineHelpText>
        <label>Days to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Debt_To_Income_Ratio__c</fullName>
        <description>The system uses this formula field to determine and display an applicant’s debt to income ratio.</description>
        <formula>IF(LLC_BI__Total_Monthly_Income__c &gt; 0 , LLC_BI__Total_Monthly_Debt__c / LLC_BI__Total_Monthly_Income__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field displays an applicant’s debt to income ratio.</inlineHelpText>
        <label>Debt to Income Ratio</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Default_App__c</fullName>
        <defaultValue>&apos;loan.dashboard-loan&apos;</defaultValue>
        <description>This field is required. When using the nCino UI, this field should be set via a workflow. This field is used to determine the default landing page for this loan within the nCino User Interface.</description>
        <inlineHelpText>This field is used to determine the default landing page for this loan within the nCino User Interface.</inlineHelpText>
        <label>Default App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Depth__c</fullName>
        <description>This number field auto-populates and specifies the level of depth of the multi-tiered loan facility: Main= 1, Limit=2, Sublimit= 3, Takedown=4. This is one of the components used to drive the visual representation of multi-tiered loan facilities.</description>
        <formula>IF(
 AND(
  NOT(ISNULL(LLC_BI__Product_Package__c)),
  LLC_BI__Is_Main__c
 ),1,IF(LLC_BI__ParentLoan__r.LLC_BI__Is_Main__c, 2, IF(LLC_BI__ParentLoan__r.LLC_BI__Is_Limit__c , 3, IF(LLC_BI__ParentLoan__r.LLC_BI__Is_Sublimit__c, 4, 100))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is optional. It is manually populated. This is a free text field that can be used to describe the purpose of the loan.</description>
        <label>Loan Purpose</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Disbursement_Description__c</fullName>
        <description>This field is optional. It is manually populated. This field is a picklist, used to specify how the loan is being disbursed.</description>
        <label>Disbursement Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Payable</fullName>
                </value>
                <value>
                    <fullName>PayOff</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>NonLoan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Employee_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. This checkbox is used to specify when a loan belongs to an employee of the financial institution. The employee has entity involvement on this loan.</description>
        <inlineHelpText>This checkbox is used to specify when a loan belongs to an employee of the financial institution. The employee has entity involvement on this loan.</inlineHelpText>
        <label>Employee Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Estimated_Property_Value_2__c</fullName>
        <description>The user populates this required text field to record the borrower’s estimated property value. By default, this field is blank.</description>
        <inlineHelpText>Enter the estimated property value. Must be a numerical value.</inlineHelpText>
        <label>Estimated Property Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fee_Loan_Aggregate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically populated when a Fee is created. It is a lookup to an object that aggregates all the fee information related to this loan.</description>
        <inlineHelpText>Object that aggregates all the fee information related to this loan.</inlineHelpText>
        <label>Fee Loan Aggregate</label>
        <referenceTo>LLC_BI__Fee_Loan_Aggregate__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__File_Number__c</fullName>
        <description>This field is optional. It is manually populated. This text field is used to specify a reference number used for attorney records.</description>
        <inlineHelpText>Attorney&apos;s reference number</inlineHelpText>
        <label>File Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Financed_Fee_Calculations__c</fullName>
        <description>The user populates this picklist field to indicate the action the system takes with the financed fees associated with the loan. At install, this field defaults to null for existing loans and Manual Calculation for new loans.</description>
        <inlineHelpText>Select value from this picklist to add or subtract financed fees from loan amount, or manually calculate.</inlineHelpText>
        <label>Financed Fee Calculations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual Calculation</fullName>
                    <default>true</default>
                    <label>Manual Calculation</label>
                </value>
                <value>
                    <fullName>Add to Loan Amount</fullName>
                </value>
                <value>
                    <fullName>Subtract From Loan Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__First_Payment_Date__c</fullName>
        <description>This field is optional, but required when using payment structure. It is manually populated. It sets the first payment date of a loan repayment schedule. When used with payment structure, this field is used to determine amortization and complex payments.</description>
        <inlineHelpText>First Payment date is the expected date the first loan payment will be made. This field is used to determine amortization and complex payments.</inlineHelpText>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__First_Rate_Increase__c</fullName>
        <description>The system automatically populates this optional field using values from the Product Feature with how much the interest rate increases for the first rate increase.</description>
        <inlineHelpText>This system-populated field displays how much the interest rate increases for the first rate increase.</inlineHelpText>
        <label>First Rate Increase</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funded__c</fullName>
        <description>This field is optional. It is manually populated. This field is used to show the funding percentage of a loan.</description>
        <label>% Funded</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>